Still working on bugs. Push most recent files to ensure they are up to date.

--- a/Gold/index.html
+++ b/Gold/index.html
@@ -45,7 +45,6 @@
 
 			<div>
 				<center>
-					<h2>Body Health & Fitness</h2>
 					<p>...helping you schedule your worouts</p>
 				</center>
 			</div>
@@ -214,21 +213,11 @@
 	<div data-role="page" id="additem">
 
 		<!-- Header -->
-		<div data-role="header" data-position="fixed" data-add-back-btn="true" class="mainColor">
+		<div data-role="header" data-position="fixed" class="mainColor">
 			<h1>Start a New Workout</h1>
 		</div>
 
 		<div data-role="content">
-
-			<div id="screenTitle">
-				<center>
-					<h2>Start a New Workout</h2>
-				</center>
-			</div>
-
-			<div id="requiredIndicator">
-				<p>* Indicates Required Field</p>
-			</div>
 
 			<!-- Display Link -->
 			<div id="nav">
@@ -240,6 +229,10 @@
 
 			<!-- Form Started -->
 			<form action="" method="post" id="workoutForm" data-ajax="false">
+
+				<div id="requiredIndicator">
+					<p>* Indicates Required Field</p>
+				</div>
 
 				<!-- Workout Style / Select -->
 				<div data-role="fieldcontain">
