Removed placeholders from form elements. Checked checkbox and radio. Added reset button, but made it dominant. Removed all required field indicators. Made sure index.html and main.js are still in order.

--- a/Bronze/additem.html
+++ b/Bronze/additem.html
@@ -23,7 +23,7 @@
 	<body>
 		<header>
 			<!-- New Workout Title -->
-			<a href="index.html" id="failSafe"><h1>Start a new workout!</h1></a>
+			<a href="index.html" rel="external" id="failSafe"><h1>Start a new workout!</h1></a>
 			<!-- App Description -->
 			<p><medium><strong>...Helping you schedule your workouts</strong></medium></p>
 			<nav>
@@ -41,11 +41,10 @@
 				<legend>Training</legend>
 				<ul>
 					<li>
-						<span class="required"><span>* </span>Required Fields</span>
 						<ul id="errors"></ul>
 						<!-- Start Select & Option -->
 						<!-- New Dynamic Code -->
-						<li id="select"><label for="training"><span>* </span>Training Style: </label><br /></li>
+						<li id="select"><label for="training">Training Style: </label><br /></li>
 						<!-- Old Code -->
 					<!--<label for="method">Training Style:</label><br>
 						<select id="method">
@@ -58,16 +57,16 @@
 						<!-- End Select & Option -->
 					</li>
 					<!-- Text Field -->
-					<li><label for="wname"><span>* </span>Workout Name: </label><br /><input type="text" id="wname" placeholder="Running, Weights..." /></li>
+					<li><label for="wname">Workout Name: </label><br /><input type="text" id="wname" /></li>
 					<!-- Checkbox -->
-					<li><label for="favorite"> &#160 Is this a favorite? </label><input type="checkbox" value="Is this a favorite?" id="favorite" /></li>
+					<li><label for="favorite">Is this a favorite? </label><input type="checkbox" value="Is this a favorite?" id="favorite" checked/></li>
 					<!-- Range -->
-					<li><label for="howlong"> &#160 How long will you do this workout? (5-60 Minutes)</label><br /><input type="range" id="howlong" value="0" min="5" max="60" step="5" /></li>
-					<li> &#160 What time would you prefer for this workout?</li>
+					<li><label for="howlong">How long will you do this workout? (5-60 Minutes)</label><br /><input type="range" id="howlong" value="0" min="5" max="60" step="5" /></li>
+					<li>What time would you prefer for this workout?</li>
 					<!-- Radio -->
 					<li><input type="radio" value="Morning" id="morning" name="timeofday" /><label for="morning">Morning</label></li>
 					<li><input type="radio" value="Afternoon" id="afternoon" name="timeofday" /><label for="afternoon">Afternoon</label></li>
-					<li><input type="radio" value="Evening" id="evening" name="timeofday" /><label for="evening">Evening</label></li>
+					<li><input type="radio" value="Evening" id="evening" name="timeofday" checked/><label for="evening">Evening</label></li>
 					<li><label for="completiondate"><span>* </span>Date to be completed</label><br /><input type="date" value="completiondate" id="completiondate" name="completiondate" /></li>
 				</ul>
 				<!-- End Fieldset -->
@@ -77,12 +76,13 @@
 					<legend>Motivation</legend>
 					<ul>
 						<!-- Text Area -->
-						<li><label for="comments"><span>* </span>Start getting yourself motivated.</label><br /><textarea id="comments" placeholder="Motivation starts here."></textarea></li>
+						<li><label for="comments">Start getting yourself motivated.</label><br /><textarea id="comments"></textarea></li>
 					</ul>
 			<!-- End Fieldset -->
 			</fieldset>
 			<div class="button">
 				<!-- Submit / Add Workout or Clear Data -->
+				<input type="reset" name="reset" value="Reset" />
 				<input type="submit" name="save" id="saveData" value="Add Workout!" />
 			</div>
 		<!-- Form Ended -->
