--- a/Gold/index.html
+++ b/Gold/index.html
@@ -37,6 +37,7 @@
 	
 		<!-- Header -->
 		<div data-role="header" data-position="fixed" class="mainColor">
+			<!-- <img src="images/BHF_Logo.png" alt="Body Health & Fitness"/> Will be adding in a streamlined logo-->
 			<h1>Body Health & Fitness</h1>
 		</div>
 		
@@ -213,7 +214,9 @@
 	<div data-role="page" id="additem">
 
 		<!-- Header -->
-		<div data-role="header" data-position="fixed" class="mainColor">
+		<div data-role="header" data-position="fixed" id="addHeader" class="mainColor">
+			<a href="#" id="addBack" data-icon="arrow-l" data-rel="back" data-direction="reverse" class="secondaryColor">Back</a>
+			<!-- <img src="images/BHF_Logo.png" alt="Body Health & Fitness"/> Will be adding in a streamlined logo-->
 			<h1>Start a New Workout</h1>
 		</div>
 
@@ -279,7 +282,7 @@
 				</div>
 
 				<!-- Completion Date -->
-				<label for="completiondate">Date to be completed *</label><br /><input type="date" value="YYYY-MM-DD" id="completiondate" name="completiondate" data-role="datebox" data-options='{"mode": "calbox", "calTodayButton": true}' />
+				<label for="completiondate">Date to be completed *</label><br /><input type="date" placeholder="YYYY-MM-DD" id="completiondate" name="completiondate" data-role="datebox" data-options='{"mode": "calbox", "calTodayButton": true}' data-transition="slideup" class="required" />
 
 				<!-- Motivation / Comments -->
 				<div data-role="fieldcontain">
@@ -290,10 +293,10 @@
 				<!-- Submit(Save) and Reset -->
 				<div class="ui-grid-a">
 					<div class="ui-block-a">
-						<input type="submit" name="save" id="saveData" value="Save!" class="secondaryColor" />
+						<input type="submit" name="save" id="saveData" value="Save!" data-icon="check" data-iconpos="left" data-theme="b" />
 					</div>
 					<div class="ui-block-b">
-						<input type="reset" name="reset" id="reset" value="Reset" class="mainColor"/>
+						<input type="reset" name="reset" id="reset" value="Reset" />
 					</div>
 				</div>
 
@@ -320,6 +323,8 @@
 	
 		<!-- Header -->
 		<div data-role="header" data-position="fixed" class="mainColor">
+			<a href="#" id="addBack" data-icon="arrow-l" data-rel="back" data-direction="reverse" class="secondaryColor">Back</a>
+			<!-- <img src="images/BHF_Logo.png" alt="Body Health & Fitness"/> Will be adding in a streamlined logo-->
 			<h1>About the App</h1>
 		</div>
 		
@@ -349,6 +354,14 @@
 								<p>This will tell you about the coder</p>
 							</a>
 						</li>
+
+						<li>
+							<a href="#jqmdb">
+								<img src="images/.png"/>
+								<h4>About DateBox</h4>
+								<p>Attribution for DateBox</p>
+							</a>
+						</li>
 					
 					</ul>
 				</div>
@@ -370,10 +383,12 @@
 	</div>
 
 	<!-- Start of About App Page -->
-	<div data-role="page" id="aboutApp" data-add-back-btn="true">
+	<div data-role="page" id="aboutApp">
 	
 		<!-- Header -->
 		<div data-role="header" data-position="fixed" class="mainColor">
+			<a href="#" id="addBack" data-icon="arrow-l" data-rel="back" data-direction="reverse" class="secondaryColor">Back</a>
+			<!-- <img src="images/BHF_Logo.png" alt="Body Health & Fitness"/> Will be adding in a streamlined logo-->
 			<h1>About the App</h1>
 		</div>
 		
@@ -425,12 +440,64 @@
 		</div>
 		
 	</div>
+
+	<!-- Start of DateBox Plugin Page -->
+	<div data-role="page" id="jqmdb">
+	
+		<!-- Header -->
+		<div data-role="header" data-position="fixed" class="mainColor">
+			<a href="#" id="addBack" data-icon="arrow-l" data-rel="back" data-direction="reverse" class="secondaryColor">Back</a>
+			<!-- <img src="images/BHF_Logo.png" alt="Body Health & Fitness"/> Will be adding in a streamlined logo-->
+			<h1>About the DateBox Plugin</h1>
+		</div>
+		
+		<!--  DateBox Content -->
+		<div data-role="content">
+
+			<div>
+				<img src="images/jquery_logo_db.png" class="imgSize" />
+				<p><center><small>A Date and Time Picker plugin for jQueryMobile</small></center></p>
+				<p><center><small>1.0.1</small></center></p>
+			</div>
+
+			<div>
+				<h4>About the DateBox Plugin</h4>
+				<p class="indent">This plug in solves an issue inside of the iOS simulator. By using it, it was able to assist me in correcting the date format that jQM uses to validate the input date.</p>
+				<p class="indent">Also, with this plug in, you get nice and nifty calendar dialog. Which is also a plus.</p>
+				<p class="indent">Now, this plugin belongs to it's rightful owner. Should you like to read about this plugin, follow the links below:</p>
+			</div>
+
+			<div>
+				<ul data-role="listview" data-inset="true">
+					<li><a href="http://dev.jtsage.com/jQM-DateBox/">JT Sage - jQM DateBox</a></li>
+					<li><a href="https://github.com/jtsage/jquery-mobile-datebox/blob/master/README.md">jQM DateBox Features</a></li>
+					<li><a href="https://github.com/jtsage/jquery-mobile-datebox/blob/master/LICENSE">jQM DateBox License</a></li>
+				</ul>
+			</div>
+
+		</div>
+
+		<!-- Footer -->
+		<div data-role="footer" data-position="fixed">
+			<!-- Navbar -->
+			<div data-role="navbar">
+				<ul>
+					<li><a href="#home" data-icon="home" data-iconpos="left" class="mainColor">Home</a></li>
+					<li><a href="#about" data-icon="info" data-iconpos="left" class="secondaryColor">About</a></li>
+					<li><a href="#otherApp"data-icon="check" data-iconpos="left" class="mainColor">Other App</a></li>
+				</ul>
+			</div>
+		</div>
+		
+	</div>
 	
 	<!-- Start of otherApp Page -->
 	<div data-role="page" id="otherApp" data-add-back-btn="true">
 	
 		<!-- Header -->
 		<div data-role="header" data-position="fixed" class="mainColor">
+			<a href="#" id="addBack" data-icon="arrow-l" data-rel="back" data-direction="reverse" class="secondaryColor">Back</a>
+			<!-- <img src="images/BHF_Logo.png" alt="Body Health & Fitness"/> Will be adding in a streamlined logo-->
 			<h1>About the Other App</h1>
 		</div>
 		
@@ -445,7 +512,7 @@
 				</li>
 			</ul>
 
-			<a href="http://alucardfair.github.com/MiU-Project-3/Bronze/index.html" data-role="button">Checkout Bronze App</a>
+			<a href="http://alucardfair.github.com/MiU-Project-3/Bronze/index.html" data-role="button" data-theme="b">Checkout Bronze App</a>
 
 		</div>
 		
@@ -468,6 +535,8 @@
 	
 		<!-- Header -->
 		<div data-role="header" data-position="fixed" class="mainColor">
+			<a href="#" id="addBack" data-icon="arrow-l" data-rel="back" data-direction="reverse" class="secondaryColor">Back</a>
+			<!-- <img src="images/BHF_Logo.png" alt="Body Health & Fitness"/> Will be adding in a streamlined logo-->
 			<h1>Fitness News</h1>
 		</div>
 		
@@ -571,6 +640,8 @@
 		
 		<!-- Header -->
 		<div data-role="header" data-position="fixed" class="mainColor">
+			<a href="#" id="addBack" data-icon="arrow-l" data-rel="back" data-direction="reverse" class="secondaryColor">Back</a>
+			<!-- <img src="images/BHF_Logo.png" alt="Body Health & Fitness"/> Will be adding in a streamlined logo-->
 			<h1>Under Construction</h1>
 		</div>
 
